# kurayami

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
kurayami-cli/: Cargo.toml
kurayami-cli/src/: main.rs
kurayami-core/: Cargo.toml
kurayami-core/src/: lib.rs
kurayami-resolver/: Cargo.toml
kurayami-resolver/src/: cache.rs  doh.rs  dot.rs  filter.rs  lib.rs  proxy.rs  system.rs  tor.rs
