[package]
name = "kurayami-resolver"
version = "0.1.0"
description = "DNS backends and filters for kurayami privacy DNS resolver"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
hickory-proto = "0.25"
hickory-resolver = { version = "0.25", features = ["tls-ring", "tokio"] }
kakuremino = { git = "https://github.com/pleme-io/kakuremino", default-features = false, features = ["tor"] }
kurayami-core = { path = "../kurayami-core" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "net"] }
tracing = "0.1"

[lints]
workspace = true
